2001-10-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add the Ximian gtop icon as default window
	icon

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	* procactions.c: fix the crash. The tree was being updated
	while going through the selected processes and if one was
	removed from the e-tree then e-tree would crash. Ugly hack
	just removing the update timeout while doing the foreach
	function

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	* procactions.c: add support for renicing multiple processes

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	Add ability to select multiple processes and do the corresponding
	actions on all selected processes. Crashes when killing multiple
	processes and one needs the root dialog though and no renice
	support yet.

	* proctble.etspec: change selection mode to "browse"

	* favorites.c: hide all selected processes. Also update the
	tree when a blacklisted processes is readded for good
	feedback
	
	* procactions.c: when putting up root dialog specify the 
	process name since there could be multiple processes that
	need to be killed as root. Term/Kill all selected processes.

	* procdialogs.c: make sure to hide all processes

	* callbacks.c: call any new functions to perforam actions on all
	processes

2001-10-17  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: minor tweaks

2001-10-14  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: improve the layout of the memory/swap sizes
	to make them more readable

	* load-graph.c: update the labels accordingly

2001-10-14  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: remove the free space column in the disk
	list and make the mount directory column the second
	column. Hopefully makes the list a little easier to digest.

	* callbacks.c: make the size string show 1 decimal for
	GB sizes and no decimal for MB sizes as it aids the display
	of the sizes

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* release 0.10.3
