@@ -1,3 +1,9 @@
+2001-10-25  Kevin Vandersloot <kfv101@psu.edu>
+
+	* favorites.c, memmaps.c: clashes in comman variables causeing
+	garbage in the e-trees. Declare global variables as static.
+	Fixes bug #59555.
+
 2001-10-19  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.c: add the Ximian gtop icon as default window
